<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".FirstActivity">

    <RelativeLayout
        android:id="@+id/tolayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/topnavigationshape">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="#fff"
            android:text="TUTE 3"
            android:textSize="20dp"
            android:textStyle="bold"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/midlayout1"
        android:layout_marginTop="80dp"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:id="@+id/Number1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:textStyle="bold"
        android:textColor="#663B3B"
        android:layout_marginLeft="20dp"
        android:textSize="30dp"
        android:text="@string/number1" />

    <EditText
        android:id="@+id/NumberText"
        android:layout_width="200dp"
        android:textSize="30dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="40dp"
        android:layout_toRightOf="@+id/Number1"
        android:inputType="number" />

    <TextView
        android:id="@+id/Number2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        android:textColor="#663B3B"
        android:textSize="30dp"
        android:textStyle="bold"
        android:layout_below="@+id/Number1"
        android:text="@string/number2" />
    <EditText
        android:id="@+id/Number2text"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="40dp"
        android:textSize="30dp"
        android:layout_below="@+id/NumberText"
        android:layout_toRightOf="@+id/Number2"
        android:inputType="number"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/equation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        android:textSize="30dp"
        android:textStyle="italic"
        android:layout_below="@+id/Number2text"
        android:text="@string/equation" />

    <Button

        android:id="@+id/Plusbtn"
        android:layout_width="190dp"
        android:layout_height="70dp"
        android:textSize="60dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="40dp"
        android:textColor="#fff"
        android:layout_below="@+id/equation"
        android:background="@drawable/okbtn"
        android:text="@string/plus"
        />
    <Button
        android:layout_width="190dp"
        android:layout_height="70dp"
        android:textSize="60dp"
        android:id="@+id/Minbtn"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="10dp"
        android:textColor="#fff"
        android:layout_below="@+id/equation"
        android:background="@drawable/okbtn"
        android:layout_toRightOf="@+id/Plusbtn"
        android:text="@string/min"
       />
    <Button
        android:layout_width="190dp"
        android:layout_height="70dp"
        android:textSize="60dp"
        android:id="@+id/Multibtn"
        android:textColor="#fff"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/Plusbtn"
        android:background="@drawable/okbtn"
        android:layout_marginLeft="10dp"
        android:text="@string/multiply"
        />
    <Button
        android:layout_marginTop="30dp"
        android:id="@+id/divbtn"
        android:layout_width="190dp"
        android:layout_height="70dp"
        android:textSize="60dp"
        android:textColor="#fff"
        android:background="@drawable/okbtn"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/Multibtn"
        android:layout_below="@+id/Minbtn"
        android:text="@string/divide"
        />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/midlayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/botnavigation">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="#fff"
            android:text="IT19134536"
            android:textSize="20dp"
            android:textStyle="bold"/>
    </RelativeLayout>
</RelativeLayout>