<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstActivity">

    <RelativeLayout
        android:id="@+id/tolayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/topnavigationshape">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="#fff"
            android:text="TUTE 3"
            android:textSize="20dp"
            android:textStyle="bold"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/midlayout"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/Number1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:layout_marginLeft="20dp"
            android:textSize="20dp"
            android:text="@string/number1"
            />

        <EditText
            android:id="@+id/NumberText"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginLeft="70dp"
            android:layout_toRightOf="@+id/Number1"
            android:inputType="number"
            />

        <TextView
            android:id="@+id/Number2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:layout_marginLeft="20dp"
            android:textSize="20dp"
            android:layout_below="@+id/Number1"
            android:text="@string/number2" />

        <EditText
            android:id="@+id/Number2text"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/NumberText"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="47dp"
            android:layout_toRightOf="@+id/Number2"
            android:inputType="number" />

        <Button
            android:id="@+id/okbtn"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/OK"
            android:textColor="#fff"
            android:background="@drawable/okbtn"
            android:layout_below="@+id/Number2text"
            android:layout_marginTop="60dp"
            android:layout_centerHorizontal="true"/>





    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/midlayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/botnavigation">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="#fff"
            android:text="IT19134536"
            android:textSize="20dp"
            android:textStyle="bold"/>
    </RelativeLayout>








</RelativeLayout>